@@ -25,6 +25,8 @@ B *bmk PARAMS((B *prop));
 void brm PARAMS((B *b));
 
 B *bfind PARAMS((unsigned char *s));
+B *bfind_check PARAMS((unsigned char *s));
+B *bfind_reload PARAMS((unsigned char *s));
 
 P *pdup PARAMS((P *p));
 P *pdupown PARAMS((P *p, P **o));
